src/main/java/com/example/pairprogramming/user/error/NotInputSpecialSymbolException.java
package com.example.pairprogramming.user.error;

public class NotInputSpecialSymbolException extends RuntimeException{
}
